Name change due to duplicate name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-extension-pack",
+  "name": "js-awesome-soho-extension-pack",
   "publisher": "comnori",
   "displayName": "JS/TS AWESOME-SOHO Extension Pack",
   "description": "Popular extensions for JS/TS development",
