--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publisher": "comnori",
   "displayName": "JS/TS AWESOME-SOHO Extension Pack",
   "description": "Popular extensions for JS/TS development",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "engines": {
     "vscode": "^1.84.0"
   },
@@ -52,7 +52,8 @@
     "oderwat.indent-rainbow",
     "PKief.material-icon-theme",
     "SonarSource.sonarlint-vscode",
-    "usernamehw.errorlens"
+    "usernamehw.errorlens",
+    "semanticdiff.semanticdiff"
   ],
   "scripts": {
     "package": "vsce package --out ./build",
@@ -67,5 +68,6 @@
       "type": "patreon",
       "url": "https://patreon.com/comnori"
     }
-  ]
+  ],
+  "pricing": "Free"
 }
